--- a/wiki/ClassBinder.wiki
+++ b/wiki/ClassBinder.wiki
@@ -123,6 +123,33 @@ Though whether or not such an automatic conversion makes sense for your case is 
 
 We can of course choose to apply only the getter or the setter if we like, to allow conversions in only one direction.
 
+=Object Construction with or without `new`=
+
+Consider this code:
+
+{{{
+var x = new Foo();
+var y = Foo();
+}}}
+
+Notice how the `Foo()` constructor is called two different ways. !JavaScript differentiates
+between the two, and native implementations must normally "do some special stuff" if they
+want the second form to work as one might expect it to.
+
+Versions of v8-juice newer than 20090331 have a toggle to allows class binders to specify
+whether the second syntax works like the first or not. By default this option is turned off,
+but it can be enabled with:
+
+{{{
+WeakJSClassCreator<T>::AllowCtorWithoutNew(true);
+}}}
+
+`WeakJSClassCreator<T>` will, if that toggle is activated, force the second syntax
+to behave exactly like the first one. `WeakJSClassCreator` does not currently support
+different behaviours for both syntaxes, such that `Foo()` and `new Foo()` would both
+be legal but have different symantics.
+
+
 =Example of using !ClassBinder=
 
 Here's an example of how `ClassBinder` can be used.
@@ -304,11 +331,13 @@ m.other.str = i am the other!
 
 =Dual JS/C++ Inheritance=
 
-As of 20090324 WeakJSClassCreator supports dual JS/C++ inheritance. What does that mean?
-It means that if we have native type called `ParentType` and a suclass called `SubType`,
-and we bind both of them with WeakJSClassCreator, then the JS-side `SubType` objects can
-access their _inherited_ bound member functions as if they were an object of type `ParentType`.
-That sounds a bit confusing, but an example might clear it up:
+As of 20090324 WeakJSClassCreator supports dual JS/C++
+inheritance. What does that mean?  It means that if we have native
+type called `ParentType` and a subclass called `SubType`, and we bind
+both of them with WeakJSClassCreator, then the JS-side `SubType`
+objects can access their _inherited_ bound member functions as if they
+were a native object of type `ParentType`.  That might sound a bit
+confusing, but an example might clear it up:
 
 {{{
 class ParentType
@@ -351,16 +380,15 @@ function. However, when crossing JS/C++ boundaries, that feature does
 not come for free. Since we use C++ templates to create the bindings
 for classes, any conversions must know the _exact_ templatized type of
 the native class. Because of this, `WeakJSClassCreator<ParentType>`
-and `WeakJSClassCreator<SubType>` are, for purposes of typing (and in
-particular for purposes of cross-JS/C++ conversions), unrelated, and
-thus have no inherent implicit conversion ability.
+and `WeakJSClassCreator<SubType>` are, for purposes of typing,
+unrelated, and thus have no inherent implicit conversion ability.
 
 When `WeakJSClassCreator<SubType>::Inherit()` is called, an internal
-lookup function is added to `WeakJSClassCreator<ParentType>`, such
+lookup proxy is added to `WeakJSClassCreator<ParentType>`, such
 that calls to `WeakJSClassCreator<ParentType>::GetSelf()` (and
 friends) will act "virtually". That is, if they cannot determine that
 the JS object being converted is-exactly-a `ParentType` object, they
-will use the internal lookup function to see if the object is an
+will use the internal lookup proxy to see if the object is an
 instance of some other subclass of `ParentType`. Using this approach,
 the member functions bound to `ParentType` can get a pointer to their
 `this` object, even though the objects weren't created by
@@ -425,3 +453,61 @@ may then participate in type conversions which would normally apply
 to `ParentType` objects (for this to work, each base has to be
 `Inherit()`ed separately by its subclasses). This applies, for example, to the type conversions applied automatically to function arguments (as well as for the
 `this` object) for bound member function and bound non-member functions.
+
+=Inheriting Native Classes from JS=
+
+As of 20090331, we've got a way for JS classes to subclass a bound native class. This requires a couple
+of steps.
+
+First, when we bind the native class we must call:
+
+{{{
+WeakJSClassCreator<MyNative>::SearchPrototypeForNative(true);
+}}}
+
+This will tell the binding engine that if it cannot find the native
+`this` object for a given JS `this` object, then it should search the
+JS prototype object chain (recursively). This option is off by default because
+it is a performance hit for each call to `GetSelf()` and friends, and is only
+necessary if a class needs to be inherited by script-side classes.
+
+Secondly, in JS code we need to follow this pattern:
+
+{{{
+function MyClass()
+{
+    this.__proto__ = new MyNative(...);
+    ...
+    return this;
+}
+}}}
+
+Setting the "magic" `__proto__` property is v8's way of forcing `this`
+to be of a specific class.
+
+Lastly, use `MyClass` as if it is-a `MyNative`:
+
+{{{
+var my = new MyClass();
+print( my instanceof MyNative ); // "true"
+}}}
+
+
+The following approach will _almost_ do the same thing, but has the tragic flaw that
+all JS instances of the class share the exact same native instance:
+
+{{{
+function MyClass()
+{
+    ...
+    return this;
+}
+MyClass.prototype = new MyNative(...);
+
+// And now...
+var my = new MyClass();
+my.nativeString = "foo";
+var my2 = new MyClass();
+my2.nativeString = "bar"
+print( my.nativeString, my2.nativeString ); // "bar bar" :(
+}}}
