--- a/wiki/PluginNCurses.wiki
+++ b/wiki/PluginNCurses.wiki
@@ -130,12 +130,71 @@ which holds all of the plugin's classes and the following non-class functions:
 || `int` || `noraw()` || Equivalent to `raw(false)`. ||
 || `int` || `halfdelay(int tenths)` || See `man halfdelay`. ||
 || `Array` || `colorNames()` || Returns a list of the 8 basic color names, in an unspecified order. ||
-
+|| `void` || `ripoffline(bool fromTop)` || EXPERIMENTAL. Described below. ||
+|| `int` || `popupDialog(title,text[,rows,cols,y,x])` || Pops up a _very_basic dialog with the given title and text (it will try to guess a reasonably position and size, but you may need to help it). It waits for a single keypress, then destroys the dialog and returns that pressed key's value. ||
 
 
 Aside from those functions, nearly all standard ncurses macros are defined as
 symbolic constants of the `ncurses` object. For example, `ncurses.A_BOLD` and
 `ncurses.A_UNDERLINE`.
+
+==`ripoffline()`==
+
+ACHTUNG: EXPERIMENTAL and it might go away. Known to cause segfaults
+post-main() in some case, or cause an app to not exit curses mode at
+shutdown (hosing the console state). It has also been observed to
+interfere with `NCPad` scrolling operations (for reasons i cannot
+comprehend).
+
+`ripoffline()` allows one to "rip off" lines from the screen. These
+lines are outside of the `stdscr` area (and in fact cause `stdscr` to
+be smaller) and have several important restrictions described below and
+in the man pages for `ripoffline()` (though the native function has a slightly
+different signature).
+
+`ripoffline()`, if used at all, _must_ be called _before_ any window
+objects are created (more specifically, before curses mode is ever
+started). It can only rip one line at a time, and can only be called
+up to 5 times (these are limitations of curses). Each time it is
+called, it rips one line from the top or bottom of the screen,
+depending on the boolean parameter passed to it. Each line becomes a
+new window object, which is accessed via the roundabout approach
+shown below.
+
+{{{
+load_plugin('v8-juice-ncurses-oo');
+var nc = ncurses;
+nc.ripoffline(true); // rip from top
+nc.ripoffline(false); // rip from bottom
+
+/** We MUST (it is a curses requirement) initialize
+curses before we can access the ripped-off lines. That is done by creating
+our first window object: */
+var root = new NCPanel();
+
+// Now we can access the ripped-off lines like:
+function setupRips()
+{
+    var cl = ['white','red','white','black','cyan'];
+    for( var i = 0; i < 5; ++i ) // 5 is a built-in limit of curses
+    {
+        var rw = nc.getRippedLine(i);
+        if( ! rw ) break;
+        rw.bkgd( cl[i], cl[i+1] ) );
+        rw.addstr("ripped line #"+i+" ="+rw);
+        rw.refresh();
+    }
+}
+
+setupRips();
+}}}
+
+When using `ripoffline()`, if you find that your ncurses apps are not returning to
+normal screen mode when the last window is destroyed, try calling `ncwindow.endwin()`
+directly after destroying the last window. That will forcibly shut down curses mode
+and destroy those dangling ripped-off lines. Calling `endwin()` while other windows
+are still open can lead to a memory leak, and is not recommended.
+
 
 =NCWindow Class=
 
@@ -250,68 +309,10 @@ Here we go...
 || `int` || `overlay(NCWindow)` || See `man overlay`. ||
 || `int` || `overwrite(NCWindow)` || See `man overwrite`. ||
 || `int` || `copywin(NCWindow,int,int,int,int,int,int,bool)` || See `man copywin`. ||
-|| `void` || `ripoffline(bool fromTop)` || EXPERIMENTAL. Described below. ||
 
 TODOs:
   * Organize the member list by category.
   * Maybe provide a common API for dispatching `getch()` key codes via JS callbacks.
-
-==`ripoffline()`==
-
-ACHTUNG: EXPERIMENTAL and it might go away. Known to cause segfaults
-post-main() in some case, or cause an app to not exit curses mode at
-shutdown (hosing the console state). It has also been observed to
-interfere with `NCPad` scrolling operations (for reasons i cannot
-comprehend).
-
-`ripoffline()` allows one to "rip off" lines from the screen. These
-lines are outside of the `stdscr` area (and in fact cause `stdscr` to
-be smaller) and have several important restrictions described below and
-in the man pages for `ripoffline()` (though the native function has a slightly
-different signature).
-
-`ripoffline()`, if used at all, _must_ be called _before_ any window
-objects are created (more specifically, before curses mode is ever
-started). It can only rip one line at a time, and can only be called
-up to 5 times (these are limitations of curses). Each time it is
-called, it rips one line from the top or bottom of the screen,
-depending on the boolean parameter passed to it. Each line becomes a
-new window object, which is accessed via the roundabout approach
-shown below.
-
-{{{
-load_plugin('v8-juice-ncurses-oo');
-var nc = ncurses;
-nc.ripoffline(true); // rip from top
-nc.ripoffline(false); // rip from bottom
-
-/** We MUST (it is a curses requirement) initialize
-curses before we can access the ripped-off lines. That is done by creating
-our first window object: */
-var root = new NCPanel();
-
-// Now we can access the ripped-off lines like:
-function setupRips()
-{
-    var cl = ['white','red','white','black','cyan'];
-    for( var i = 0; i < 5; ++i ) // 5 is a built-in limit of curses
-    {
-        var rw = nc.getRippedLine(i);
-        if( ! rw ) break;
-        rw.bkgd( cl[i], cl[i+1] ) );
-        rw.addstr("ripped line #"+i+" ="+rw);
-        rw.refresh();
-    }
-}
-
-setupRips();
-}}}
-
-When using `ripoffline()`, if you find that your ncurses apps are not returning to
-normal screen mode when the last window is destroyed, try calling `ncwindow.endwin()`
-directly after destroying the last window. That will forcibly shut down curses mode
-and destroy those dangling ripped-off lines. Calling `endwin()` while other windows
-are still open can lead to a memory leak, and is not recommended.
 
 
 =NCPanel Class=
