--- a/wiki/PluginNCurses.wiki
+++ b/wiki/PluginNCurses.wiki
@@ -131,7 +131,7 @@ which holds all of the plugin's classes and the following non-class functions:
 || `int` || `halfdelay(int tenths)` || See `man halfdelay`. ||
 || `Array` || `colorNames()` || Returns a list of the 8 basic color names, in an unspecified order. ||
 || `void` || `ripoffline(bool fromTop)` || EXPERIMENTAL. Described below. ||
-|| `int` || `popupDialog(title,text[,rows,cols,y,x])` || Pops up a _very_basic dialog with the given title and text (it will try to guess a reasonably position and size, but you may need to help it). It waits for a single keypress, then destroys the dialog and returns that pressed key's value. ||
+|| `int` || `popupDialog(title,text[,rows,cols,y,x])` || Pops up a _very basic_ dialog with the given title and text (it will try to guess a reasonably position and size, but you may need to help it). It waits for a single keypress, then destroys the dialog and returns that pressed key's value. ||
 
 
 Aside from those functions, nearly all standard ncurses macros are defined as
@@ -325,7 +325,7 @@ Here we go...
 || `int` || `keypad(bool)` || See `man keypad`. ||
 || `void` || `captureCout([int attributes])` || Redirects the `std::cout` object to this window until the window is closed or `captureReset()` is called. If the attributes argument is set, the output from that stream is colored using those attributes. ||
 || `void` || `captureCerr()` || Same as `captureCout()`, but applies to the native `std::cerr` object. ||
-|| `void` || `captureReset()` || Undoes stream capturing enabled with `captureCout()` and `captureCerr()`, revering `cout` and/or `cerr` to their previous states. ||
+|| `void` || `captureReset()` || Undoes stream capturing enabled with `captureCout()` and `captureCerr()`, reverting `std::cout` and/or `std::cerr` to their previous states. ||
 || `int` || `clearok(bool)` || See `man clearok`. ||
 || `int` || `nodelay(bool)` || Analog to curses `nodelay()` ||
 || `void` || `timeout(int)` || Analog to curses `wtimeout()`. ||
